logs/initools_build.log
There was an error importing jinja2.
Please run `conda install jinja2` to enable jinja template support
Removing old build directory
Removing old work directory
BUILD START: initools-0.3.1-py27_0
Fetching package metadata: ......
Solving package specifications: .There was an error importing jinja2.
Please run `conda install jinja2` to enable jinja template support
+ /home/ubuntu/miniconda/envs/_build/bin/python setup.py install
running install
running bdist_egg
running egg_info
writing INITools.egg-info/PKG-INFO
writing top-level names to INITools.egg-info/top_level.txt
writing dependency_links to INITools.egg-info/dependency_links.txt
reading manifest file 'INITools.egg-info/SOURCES.txt'
writing manifest file 'INITools.egg-info/SOURCES.txt'
installing library code to build/bdist.linux-x86_64/egg
running install_lib
running build_py
creating build
creating build/lib
creating build/lib/initools
copying initools/iniparser.py -> build/lib/initools
copying initools/lazyiniparser.py -> build/lib/initools
copying initools/_setmixin.py -> build/lib/initools
copying initools/lazyloader.py -> build/lib/initools
copying initools/__init__.py -> build/lib/initools
copying initools/inischema.py -> build/lib/initools
copying initools/configwrapper.py -> build/lib/initools
copying initools/nested.py -> build/lib/initools
copying initools/configparser.py -> build/lib/initools
creating build/bdist.linux-x86_64
creating build/bdist.linux-x86_64/egg
creating build/bdist.linux-x86_64/egg/initools
copying build/lib/initools/iniparser.py -> build/bdist.linux-x86_64/egg/initools
copying build/lib/initools/lazyiniparser.py -> build/bdist.linux-x86_64/egg/initools
copying build/lib/initools/_setmixin.py -> build/bdist.linux-x86_64/egg/initools
copying build/lib/initools/lazyloader.py -> build/bdist.linux-x86_64/egg/initools
copying build/lib/initools/__init__.py -> build/bdist.linux-x86_64/egg/initools
copying build/lib/initools/inischema.py -> build/bdist.linux-x86_64/egg/initools
copying build/lib/initools/configwrapper.py -> build/bdist.linux-x86_64/egg/initools
copying build/lib/initools/nested.py -> build/bdist.linux-x86_64/egg/initools
copying build/lib/initools/configparser.py -> build/bdist.linux-x86_64/egg/initools
byte-compiling build/bdist.linux-x86_64/egg/initools/iniparser.py to iniparser.pyc
byte-compiling build/bdist.linux-x86_64/egg/initools/lazyiniparser.py to lazyiniparser.pyc
byte-compiling build/bdist.linux-x86_64/egg/initools/_setmixin.py to _setmixin.pyc
byte-compiling build/bdist.linux-x86_64/egg/initools/lazyloader.py to lazyloader.pyc
  File "build/bdist.linux-x86_64/egg/initools/lazyloader.py", line 190
    elif isinstance(item, Item):
       ^
SyntaxError: invalid syntax

byte-compiling build/bdist.linux-x86_64/egg/initools/__init__.py to __init__.pyc
byte-compiling build/bdist.linux-x86_64/egg/initools/inischema.py to inischema.pyc
byte-compiling build/bdist.linux-x86_64/egg/initools/configwrapper.py to configwrapper.pyc
byte-compiling build/bdist.linux-x86_64/egg/initools/nested.py to nested.pyc
byte-compiling build/bdist.linux-x86_64/egg/initools/configparser.py to configparser.pyc
creating build/bdist.linux-x86_64/egg/EGG-INFO
copying INITools.egg-info/PKG-INFO -> build/bdist.linux-x86_64/egg/EGG-INFO
copying INITools.egg-info/SOURCES.txt -> build/bdist.linux-x86_64/egg/EGG-INFO
copying INITools.egg-info/dependency_links.txt -> build/bdist.linux-x86_64/egg/EGG-INFO
copying INITools.egg-info/top_level.txt -> build/bdist.linux-x86_64/egg/EGG-INFO
copying INITools.egg-info/zip-safe -> build/bdist.linux-x86_64/egg/EGG-INFO
creating dist
creating 'dist/INITools-0.3.1-py2.7.egg' and adding 'build/bdist.linux-x86_64/egg' to it
removing 'build/bdist.linux-x86_64/egg' (and everything under it)
Processing INITools-0.3.1-py2.7.egg
Copying INITools-0.3.1-py2.7.egg to /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages
Adding INITools 0.3.1 to easy-install.pth file

Installed /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/INITools-0.3.1-py2.7.egg
Processing dependencies for INITools==0.3.1
Finished processing dependencies for INITools==0.3.1

The following NEW packages will be INSTALLED:

    openssl:    1.0.1k-1    
    pip:        6.1.1-py27_0
    python:     2.7.9-3     
    readline:   6.2-2       
    setuptools: 16.0-py27_0 
    sqlite:     3.8.4.1-1   
    system:     5.8-2       
    tk:         8.5.18-0    
    zlib:       1.2.8-0     

Linking packages ...
[                    ]|                                                  |   0%[openssl             ]|                                                  |   0%[readline            ]|#####                                             |  11%[sqlite              ]|###########                                       |  22%[system              ]|################                                  |  33%[tk                  ]|######################                            |  44%[zlib                ]|###########################                       |  55%[python              ]|#################################                 |  66%[setuptools          ]|######################################            |  77%[pip                 ]|############################################      |  88%[      COMPLETE      ]|##################################################| 100%
Removing old work directory
Source cache directory is: /home/ubuntu/miniconda/conda-bld/src_cache
Found source in cache: INITools-0.3.1.tar.gz
Extracting download
Package: initools-0.3.1-py27_0
source tree in: /home/ubuntu/miniconda/conda-bld/work/INITools-0.3.1
found egg: /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/INITools-0.3.1-py2.7.egg
number of files: 2
Fixing permissions
Fixing permissions
BUILD END: initools-0.3.1-py27_0
TEST START: initools-0.3.1-py27_0
Fetching package metadata: ......
Solving package specifications: .===== testing package: initools-0.3.1-py27_0 =====
import: u'initools'
===== initools-0.3.1-py27_0 OK =====

The following packages will be downloaded:

    package                    |            build
    ---------------------------|-----------------
    initools-0.3.1             |           py27_0          56 KB

The following NEW packages will be INSTALLED:

    initools:   0.3.1-py27_0
    openssl:    1.0.1k-1    
    pip:        6.1.1-py27_0
    python:     2.7.9-3     
    readline:   6.2-2       
    setuptools: 16.0-py27_0 
    sqlite:     3.8.4.1-1   
    system:     5.8-2       
    tk:         8.5.18-0    
    zlib:       1.2.8-0     

Fetching packages ...
initools-0.3.1   0% |                              | ETA:  --:--:--   0.00  B/sinitools-0.3.1  28% |########                       | ETA:  0:00:00  48.33 MB/sinitools-0.3.1  57% |#################              | ETA:  0:00:00  60.02 MB/sinitools-0.3.1  85% |##########################     | ETA:  0:00:00  66.42 MB/sinitools-0.3.1 100% |###############################| ETA:  0:00:00  60.04 MB/sinitools-0.3.1 100% |###############################| Time: 0:00:00  49.11 MB/s
Extracting packages ...
[      COMPLETE      ]|                                                  |   0%[initools            ]|                                                  |   0%[initools            ]|                                                  |   0%[      COMPLETE      ]|##################################################| 100%
Linking packages ...
[      COMPLETE      ]|                                                  |   0%[openssl             ]|                                                  |   0%[openssl             ]|                                                  |   0%[readline            ]|#####                                             |  10%[sqlite              ]|##########                                        |  20%[system              ]|###############                                   |  30%[tk                  ]|####################                              |  40%[zlib                ]|#########################                         |  50%[initools            ]|##############################                    |  60%[python              ]|###################################               |  70%[setuptools          ]|########################################          |  80%[pip                 ]|#############################################     |  90%[      COMPLETE      ]|##################################################| 100%
TEST END: initools-0.3.1-py27_0
# If you want to upload this package to binstar.org later, type:
#
# $ binstar upload /home/ubuntu/miniconda/conda-bld/linux-64/initools-0.3.1-py27_0.tar.bz2
#
# To have conda build upload to binstar automatically, use
# $ conda config --set binstar_upload yes

